# Test

./: .gitignore
pyvideotrans_cli/: README.md  pyproject.toml  requirements.txt
pyvideotrans_cli/src/pyvideotrans_cli/: cli.py  translate.py  tts.py
pyvideotrans_cli/src/pyvideotrans_cli.egg-info/: PKG-INFO  requires.txt
pyvideotrans_cli/videotrans/: __init__.py  cli.py
