[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvideotrans-cli"
version = "0.1.0"
description = "精简版视频翻译配音 CLI 工具 - 仅支持 Whisper 识别、本地 LLM 翻译和 Qwen TTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["video", "translation", "dubbing", "whisper", "tts", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "faster-whisper>=0.10.0",
    "dashscope>=1.14.0",
    "requests>=2.28.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
cuda = [
    "faster-whisper[cuda]>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pyvideotrans-cli = "videotrans.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/pyvideotrans-cli"
Repository = "https://github.com/your-username/pyvideotrans-cli.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["videotrans*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
